--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,6 +52,10 @@ section {
   margin-left: auto;
   margin-right: auto;
 }
+.container__shadow {
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  padding: 30px;
+}
 .hero {
   text-align: center;
   max-width: 1600px;
